<resources>
    <string name="app_name">Music</string>
    <string name="back">back</string>
    <string name="playlist">playlist</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="_00_00">00:00</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="song_menu">Song Menu</string>
    <string name="good_morning">Good Morning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="play_or_pause">play or pause</string>
</resources>