<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="currentSong"
            type="com.example.mymusicapp.models.MusicModel" />
        <variable
            name="controls"
            type="com.example.mymusicapp.models.ControlModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".playing.PlayingNowFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/iconBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/icon_arrow_down"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/nowPlayingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/iconBack"
                app:layout_constraintEnd_toStartOf="@+id/iconMenu"
                app:layout_constraintStart_toEndOf="@+id/iconBack"
                app:layout_constraintTop_toTopOf="@+id/iconBack"
                android:text="@string/now_playing"
                android:fontFamily="@font/open_sans"
                android:textSize="13sp" />

            <ImageButton
                android:id="@+id/iconMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/icon_menu"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/playlist" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/songCoverArt"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="34dp"
                android:layout_height="320dp"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nowPlayingText"
                app:layout_constraintBottom_toTopOf="@id/linearLayout"
                app:shapeAppearanceOverlay="@style/RoundedSquareLg"
                android:src="@{currentSong.image}"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:paddingBottom="44dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp">

                    <LinearLayout
                        android:id="@+id/linearLayoutInCons"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iconFav"
                        android:layout_marginEnd="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewSongName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:fontFamily="@font/open_sans_semibold"
                            android:text="@{currentSong.title}"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textViewArtistName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:ellipsize="marquee"
                            android:singleLine="true"
                            android:text="@{currentSong.artist}"
                            android:fontFamily="@font/open_sans"
                            android:textSize="14sp"
                            android:marqueeRepeatLimit="marquee_forever"/>

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/iconFav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@{controls.favorite}"
                        android:backgroundTint="#00FFFFFF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/linearLayoutInCons"
                        app:layout_constraintBottom_toBottomOf="@id/linearLayoutInCons"
                        android:contentDescription="@string/add_to_favourites" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:thumbTint="@color/primary"
                    android:progressTint="@color/primary"
                    android:layout_marginTop="34dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="34dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/startTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_00_00"
                            android:textSize="10sp"
                            android:fontFamily="@font/open_sans_light"
                            android:layout_gravity="center_horizontal"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/endTime"
                            android:gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{currentSong.duration}"
                            android:textSize="10sp"
                            android:fontFamily="@font/open_sans_light"
                            android:layout_gravity="center_horizontal"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/iconShuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@{controls.shuffle}"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/shuffle" />

                    <ImageButton
                        android:id="@+id/iconPrev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:backgroundTint="#00FFFFFF"
                        android:src="@drawable/icon_previous"
                        android:contentDescription="@string/previous" />

                    <ImageView
                        android:id="@+id/iconPausePlay"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:backgroundTint="#00FFFFFF"
                        android:layout_marginHorizontal="8dp"
                        android:src="@{controls.playPause}"
                        tools:ignore="ContentDescription" />

                    <ImageButton
                        android:id="@+id/iconNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:backgroundTint="#00FFFFFF"
                        android:src="@drawable/icon_next"
                        android:contentDescription="@string/next" />

                    <ImageButton
                        android:id="@+id/iconRepeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:layout_gravity="center_vertical"
                        android:src="@{controls.repeat}"
                        android:contentDescription="@string/repeat"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>