<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_item"
    android:paddingVertical="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_card"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon"
            android:src="@drawable/ic_baseline_music_note_24"
            android:scaleType="centerCrop"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintEnd_toStartOf="@id/itemMenu"
            app:layout_constraintTop_toTopOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="@id/icon"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_name"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="14sp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:textColor="#E6FFFFFF"
                android:text="@string/artist_name"
                android:fontFamily="@font/nunito_sans_light"
                android:textSize="12sp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/itemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_menu_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="16dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/song_menu"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>