<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:id="@+id/home"
    android:background="@drawable/bg_color_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintViewCurrentSong"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintViewCurrentSong"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_color_rounded"
            android:paddingHorizontal="16dp">

            <!-- Media -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageViewAlbumArt"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:shapeAppearanceOverlay="@style/RoundedSquareLg"
                android:src="@drawable/ic_baseline_music_note_24"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@id/imageViewAlbumArt"
                app:layout_constraintBottom_toBottomOf="@id/imageViewAlbumArt"
                app:layout_constraintStart_toEndOf="@id/imageViewAlbumArt"
                app:layout_constraintEnd_toStartOf="@id/linearLayoutIcon"
                android:orientation="vertical">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/textViewSong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/song_name"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textViewArtist"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_sans_light"
                    android:text="@string/artist_name"
                    android:textColor="#CCFFFFFF"
                    android:singleLine="true"
                    android:textSize="11sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconFavourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_like_icon"
                    android:contentDescription="@string/add_to_favourites" />

                <ImageView
                    android:id="@+id/iconPausePlay"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_play_icon_lg"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>